--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.3.2"
 
+flutter_icons:
+  image_path: "images/single-player.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
