--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,17 +8,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  exportable: ^0.1.0
-  sembast: any # ^1.7.0
+  sembast: any
   http: ^0.11.3+16
   html: any
   path_provider: ^0.4.0
-  validator: ">=0.0.4 <0.1.0"
+  validators: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.3.2"
+  flutter_launcher_icons: any
 
 flutter_icons:
   image_path: "images/sousmarin.png"
